# ConnMatrixHops

./: .gitignore  README.md
.codeocean/: environment.json
code/: LICENSE  README.md  SPEC.md  pyproject.toml  run
code/connmatrixhops/: plotting.py  widgets.py
code/notebooks/: 01_create_toy_data.ipynb  02_demo_connmatrixhops.ipynb
code/tests/: test_analyzer.py
connmatrixhops/: __init__.py  analyzer.py
data/toy_data/: cluster_assignments.csv  connectivity_matrix.npy  edge_list.csv
environment/: Dockerfile  postInstall
metadata/: metadata.yml
notebooks/: 01_create_toy_data.ipynb  02_demo_connmatrixhops.ipynb
